Fully finished the language template feature and added the english language to the site

--- a/_templates/modules/header.html
+++ b/_templates/modules/header.html
@@ -1,5 +1,13 @@
 <header>
-        <a href="index.html" class="title textLarge textLight fontLabrada">
+        <div class="languageSelection">
+            <a href="index.html">
+                <img src="images/swedish_flag.jpg" alt="Swedish">
+            </a>
+            <a href="index_english.html">
+                <img src="images/british_flag.jpg" alt="English">
+            </a>
+        </div>
+        <a href="!!!INDEX_LINK!!!" class="title textLarge textLight fontLabrada">
             DELIKAT FLORA
         </a>
         <div class="logo textMediumLarge textLogo">
@@ -13,15 +21,15 @@
                 <button onclick="onDropDownButtonClick()" class="dropButton"></button>
             </label>
             <div class="dropDownMenu">
-                !!!PRODUCTS_LINK!!!
-                !!!CONSULTATION_LINK!!!
-                !!!FLOWERGRAM_LINK!!!
+                <a href="!!!PRODUCTS_LINK!!!" class="products textMediumSmall textLight fontInter">!!!PRODUCTS!!!</a>
+                <a href="!!!CONSULTATION_LINK!!!" class="products textMediumSmall textLight fontInter">!!!CONSULTATION!!!</a>
+                <a href="!!!FLOWERGRAM_LINK!!!" class="products textMediumSmall textLight fontInter">!!!FLOWERGRAM!!!</a>
             </div>
         </div>
         
-        <div class="allServices textMedium fontProza">
-            !!!PRODUCTS_LINK!!!
-            !!!CONSULTATION_LINK!!!
-            !!!FLOWERGRAM_LINK!!!
+        <div class="allServices">
+            <a href="!!!PRODUCTS_LINK!!!" class="products textMedium textDark fontProza">!!!PRODUCTS!!!</a>
+            <a href="!!!CONSULTATION_LINK!!!" class="products textMedium textDark fontProza">!!!CONSULTATION!!!</a>
+            <a href="!!!FLOWERGRAM_LINK!!!" class="products textMedium textDark fontProza">!!!FLOWERGRAM!!!</a>
         </div>
     </header>
