--- a/_templates/pages/consultation.html
+++ b/_templates/pages/consultation.html
@@ -15,16 +15,14 @@
             <div class="servicesPage">
                 <div class="service">
                     <div class="serviceName textMedium fontProza fontBold">
-                        Konsultation
+                        !!!CONSULTATION!!!
                     </div>
                     <div class="priceTag">
-                        250kr / 30 minuter
+                        !!!MINUTES!!!
                     </div>
                     <img src="images/consultation.jpg" alt="">
                     <div class="serviceDescription">
-                        Under en 30-minuters konsultation får du personlig
-                        rådgivning av våra florister. Vi går tillsammans igenom dina önskemål, färger, former
-                        och känslan du vill förmedla. Kontakta oss så fixar vi en tid med en av våra florister.
+                        !!!CONSULTATION_DESCRIPTION!!!
                     </div>
                 </div>
             </div>
