--- a/_templates/pages/flowergram.html
+++ b/_templates/pages/flowergram.html
@@ -15,22 +15,18 @@
             <div class="servicesPage">
                 <div class="service">
                     <div class="serviceName textMedium fontProza fontBold">
-                        Blommogram
+                        !!!FLOWERGRAM!!!
                     </div>
                     <img src="images/flowergram.jpg" alt="">
                     <div class="sendFlowersText textMediumSmall fontProza">
-                        Skicka blombuketter med vår blommogramtjänst
+                        !!!SEND_FLOWERS!!!
                     </div>
                     <input type="text" class="postalCodeInput textSmall fontInter" placeholder="Postnummer: XXX XX">
-                    <div class="postalCodeOutput textSmall fontInter">
-                        
+                    <div class="postalCodeOutput textSmall fontInter"> 
                     </div>
                     <input onclick="postalCodeCheck()" type="button" class="confirmButton textSmall fontInter" value="Kolla postnummer">
                     <div class="serviceDescription textSmall fontInter">
-                        Med vår blommogram-tjänst kan du enkelt överraska någon med vackra blommor, 
-                        levererade direkt till dörren. Välj bukett, skriv en personlig hälsning, så 
-                        sköter vi resten. Perfekt för födelsedagar, högtider eller vardagsglädje.
-
+                        !!!FLOWERGRAM_DESCRIPTION!!!
                     </div>
                 </div>
             </div>
