--- a/_templates/pages/index.html
+++ b/_templates/pages/index.html
@@ -13,7 +13,7 @@
     <main>
         <div class="centerInfo textSmall fontInter">
             <div class="welcomeMessage textLarge textDark fontLabrada">
-                Välkommen till Delikat Flora!
+                !!!WELCOME!!!
             </div>
         </div>
         !!!FOOTER!!!
