--- a/_templates/pages/products.html
+++ b/_templates/pages/products.html
@@ -14,7 +14,7 @@
         <div class="centerInfo textSmall fontInter">
             <div class="sortingOptions">
                 <label class="vatButton textExtraSmall">
-                Visa priser utan moms
+                !!!SHOW_PRICE_WITHOUT_VAT!!!
                 <input type="checkbox" class="vatCheckbox" id="toggleVAT"> 
             </label>
             </div>
@@ -22,7 +22,7 @@
                 <div class="product">
                     <img src="images/tulips_10pack.jpg" alt="">
                     <div class="productDescription">
-                        10 Tulpaner
+                        !!!TULIPS!!!
                     </div>
                     <div class="priceTag">
                         <div>
@@ -33,7 +33,7 @@
                 <div class="product">
                     <img src="images/roses_10pack.jpg" alt="">
                     <div class="productDescription">
-                        10 Rosor
+                        !!!ROSES!!!
                     </div>
                     <div class="priceTag">
                         <div>
@@ -44,11 +44,11 @@
                 <div class="product">
                     <img src="images/autumn_bouquet.jpg" alt="">
                     <div class="productDescription">
-                        Höstbukett
+                        !!!AUTUMN_BOUQUET!!!
                     </div>
                     <div class="priceTag">
                         <div class="textGreyish">
-                            Från:
+                            !!!FROM!!!
                         </div>
                         <div>
                             <span>400</span>kr
@@ -58,11 +58,11 @@
                 <div class="product">
                     <img src="images/funeral_wreath.jpg" alt="">
                     <div class="productDescription">
-                        Begravningskrans
+                        !!!FUNERAL_WREATH!!!
                     </div>
                     <div class="priceTag">
                         <div class="textGreyish">
-                            Från:
+                            !!!FROM!!!
                         </div>
                         <div>
                             <span>800</span>kr
@@ -72,11 +72,11 @@
                 <div class="product">
                     <img src="images/wedding_bouquet.jpg" alt="">
                     <div class="productDescription">
-                        Bröllopsbukett
+                        !!!WEDDING_BOUQUET!!!
                     </div>
                     <div class="priceTag">
                         <div class="textGreyish">
-                            Från:
+                            !!!FROM!!!
                         </div>
                         <div>
                             <span>1200</span>kr
@@ -86,11 +86,11 @@
                 <div class="product">
                     <img src="images/summer_bouquet.jpg" alt="">
                     <div class="productDescription">
-                        Sommarbukett
+                        !!!SUMMER_BOUQUET!!!
                     </div>
                     <div class="priceTag">
                         <div class="textGreyish">
-                            Från:
+                            !!!FROM!!!
                         </div>
                         <div>
                             <span>200</span>kr
