--- a/website/about_us.html
+++ b/website/about_us.html
@@ -10,6 +10,14 @@
 
 <body>
     <header>
+        <div class="languageSelection">
+            <a href="index.html">
+                <img src="images/swedish_flag.jpg" alt="Swedish">
+            </a>
+            <a href="index_english.html">
+                <img src="images/british_flag.jpg" alt="English">
+            </a>
+        </div>
         <a href="index.html" class="title textLarge textLight fontLabrada">
             DELIKAT FLORA
         </a>
@@ -24,28 +32,16 @@
                 <button onclick="onDropDownButtonClick()" class="dropButton"></button>
             </label>
             <div class="dropDownMenu">
-                <a href="products.html" class="products textSmall textLight fontInter">
-                    Produkter
-                </a>
-                <a href="consultation.html" class="consultation textSmall textLight fontInter">
-                    Konsultation
-                </a>
-                <a href="flowergram.html" class="flowergram textSmall textLight fontInter">
-                    Blommogram
-                </a>
+                <a href="products.html" class="products textMediumSmall textLight fontInter">Produkter</a>
+                <a href="consultation.html" class="products textMediumSmall textLight fontInter">Konsultation</a>
+                <a href="flowergram.html" class="products textMediumSmall textLight fontInter">Blommogram</a>
             </div>
         </div>
         
-        <div class="allServices textMedium fontProza">
-            <a href="products.html" class="products textDark fontBold">
-                Produkter
-            </a>
-            <a href="consultation.html" class="consultation textDark fontBold">
-                Konsultation
-            </a>
-            <a href="flowergram.html" class="flowergram textDark fontBold">
-                Blommogram
-            </a>
+        <div class="allServices">
+            <a href="products.html" class="products textMedium textDark fontProza">Produkter</a>
+            <a href="consultation.html" class="products textMedium textDark fontProza">Konsultation</a>
+            <a href="flowergram.html" class="products textMedium textDark fontProza">Blommogram</a>
         </div>
     </header>
     <main>
@@ -54,7 +50,7 @@
                 <div class="staffMember">
                     <img src="images/fredrik_ortqvist.jpg" alt="">
                     <p>Fredrik Örtqvist</p>
-                    <p>Ägare</p>
+                    Ägare
                 </div>
                 <div class="staffMember">
                     <img src="images/anna_pettersson.jpg" alt="">
@@ -146,7 +142,7 @@
                 <div class="textMedium fontProza fontBold">
                     Delikat Flora
                 </div>
-                <a href="about_us.html"> Om oss</a>
+                <a href="about_us.html">Om oss</a>
             </div>
             <div class="divider"></div>
             <div class="contactInfo">
