--- a/website/about_us_english.html
+++ b/website/about_us_english.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delikat Flora</title>
+    <title>Om Oss</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -18,7 +18,7 @@
                 <img src="images/british_flag.jpg" alt="English">
             </a>
         </div>
-        <a href="index.html" class="title textLarge textLight fontLabrada">
+        <a href="index_english.html" class="title textLarge textLight fontLabrada">
             DELIKAT FLORA
         </a>
         <div class="logo textMediumLarge textLogo">
@@ -32,22 +32,36 @@
                 <button onclick="onDropDownButtonClick()" class="dropButton"></button>
             </label>
             <div class="dropDownMenu">
-                <a href="products.html" class="products textMediumSmall textLight fontInter">Produkter</a>
-                <a href="consultation.html" class="products textMediumSmall textLight fontInter">Konsultation</a>
-                <a href="flowergram.html" class="products textMediumSmall textLight fontInter">Blommogram</a>
+                <a href="products_english.html" class="products textMediumSmall textLight fontInter">Products</a>
+                <a href="consultation_english.html" class="products textMediumSmall textLight fontInter">Consultation</a>
+                <a href="flowergram_english.html" class="products textMediumSmall textLight fontInter">Flowergram</a>
             </div>
         </div>
         
         <div class="allServices">
-            <a href="products.html" class="products textMedium textDark fontProza">Produkter</a>
-            <a href="consultation.html" class="products textMedium textDark fontProza">Konsultation</a>
-            <a href="flowergram.html" class="products textMedium textDark fontProza">Blommogram</a>
+            <a href="products_english.html" class="products textMedium textDark fontProza">Products</a>
+            <a href="consultation_english.html" class="products textMedium textDark fontProza">Consultation</a>
+            <a href="flowergram_english.html" class="products textMedium textDark fontProza">Flowergram</a>
         </div>
     </header>
     <main>
         <div class="centerInfo textSmall fontInter">
-            <div class="welcomeMessage textLarge textDark fontLabrada">
-                Välkommen till Delikat Flora!
+            <div class="staffPage">
+                <div class="staffMember">
+                    <img src="images/fredrik_ortqvist.jpg" alt="">
+                    <p>Fredrik Örtqvist</p>
+                    Owner
+                </div>
+                <div class="staffMember">
+                    <img src="images/anna_pettersson.jpg" alt="">
+                    <p>Anna Pettersson</p>
+                    <p>Hortonoma</p>
+                </div>
+                <div class="staffMember">
+                    <img src="images/orjan_johansson.jpg" alt="">
+                    <p>Örjan Johansson</p>
+                    <p>Florist</p>
+                </div>
             </div>
         </div>
         <footer class="textSmall textLight fontInter">
@@ -56,17 +70,17 @@
                     <thead class="textMedium fontProza fontBold">
                         <tr>
                             <th>
-                                Dag
+                                Day
                             </th>
                             <th>
-                                Öppettider
+                                Opening hours
                             </th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td>
-                                Måndag
+                                Monday
                             </td>
                             <td>
                                 10-16
@@ -74,7 +88,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Tisdag
+                                Tuesday
                             </td>
                             <td>
                                 10-16
@@ -82,7 +96,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Onsdag
+                                Wednesday
                             </td>
                             <td>
                                 12-18
@@ -90,7 +104,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Torsdag
+                                Thursday
                             </td>
                             <td>
                                 10-16
@@ -98,7 +112,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Fredag
+                                Friday
                             </td>
                             <td>
                                 10-16
@@ -106,7 +120,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Lördag
+                                Saturday
                             </td>
                             <td>
                                 12-15
@@ -114,10 +128,10 @@
                         </tr>
                         <tr>
                             <td>
-                                Söndag
+                                Sunday
                             </td>
                             <td>
-                                STÄNGT
+                                CLOSED
                             </td>
                         </tr>
                     </tbody>
@@ -128,12 +142,12 @@
                 <div class="textMedium fontProza fontBold">
                     Delikat Flora
                 </div>
-                <a href="about_us.html">Om oss</a>
+                <a href="about_us_english.html">About us</a>
             </div>
             <div class="divider"></div>
             <div class="contactInfo">
                 <div class="textMedium fontProza fontBold">
-                    Kontaktinformation
+                    Contact information
                 </div>
                 <p>
                     <a href="tel:+0630555555">0630 555 555</a>
