--- a/website/products_english.html
+++ b/website/products_english.html
@@ -18,7 +18,7 @@
                 <img src="images/british_flag.jpg" alt="English">
             </a>
         </div>
-        <a href="index.html" class="title textLarge textLight fontLabrada">
+        <a href="index_english.html" class="title textLarge textLight fontLabrada">
             DELIKAT FLORA
         </a>
         <div class="logo textMediumLarge textLogo">
@@ -32,23 +32,23 @@
                 <button onclick="onDropDownButtonClick()" class="dropButton"></button>
             </label>
             <div class="dropDownMenu">
-                <a href="products.html" class="products textMediumSmall textLight fontInter">Produkter</a>
-                <a href="consultation.html" class="products textMediumSmall textLight fontInter">Konsultation</a>
-                <a href="flowergram.html" class="products textMediumSmall textLight fontInter">Blommogram</a>
+                <a href="products_english.html" class="products textMediumSmall textLight fontInter">Products</a>
+                <a href="consultation_english.html" class="products textMediumSmall textLight fontInter">Consultation</a>
+                <a href="flowergram_english.html" class="products textMediumSmall textLight fontInter">Flowergram</a>
             </div>
         </div>
         
         <div class="allServices">
-            <a href="products.html" class="products textMedium textDark fontProza">Produkter</a>
-            <a href="consultation.html" class="products textMedium textDark fontProza">Konsultation</a>
-            <a href="flowergram.html" class="products textMedium textDark fontProza">Blommogram</a>
+            <a href="products_english.html" class="products textMedium textDark fontProza">Products</a>
+            <a href="consultation_english.html" class="products textMedium textDark fontProza">Consultation</a>
+            <a href="flowergram_english.html" class="products textMedium textDark fontProza">Flowergram</a>
         </div>
     </header>
     <main>
         <div class="centerInfo textSmall fontInter">
             <div class="sortingOptions">
                 <label class="vatButton textExtraSmall">
-                Visa priser utan moms
+                Show prices without VAT
                 <input type="checkbox" class="vatCheckbox" id="toggleVAT"> 
             </label>
             </div>
@@ -56,7 +56,7 @@
                 <div class="product">
                     <img src="images/tulips_10pack.jpg" alt="">
                     <div class="productDescription">
-                        10 Tulpaner
+                        10 Tulips
                     </div>
                     <div class="priceTag">
                         <div>
@@ -67,7 +67,7 @@
                 <div class="product">
                     <img src="images/roses_10pack.jpg" alt="">
                     <div class="productDescription">
-                        10 Rosor
+                        10 Roses
                     </div>
                     <div class="priceTag">
                         <div>
@@ -78,11 +78,11 @@
                 <div class="product">
                     <img src="images/autumn_bouquet.jpg" alt="">
                     <div class="productDescription">
-                        Höstbukett
+                        Autumn bouquet
                     </div>
                     <div class="priceTag">
                         <div class="textGreyish">
-                            Från:
+                            From:
                         </div>
                         <div>
                             <span>400</span>kr
@@ -92,11 +92,11 @@
                 <div class="product">
                     <img src="images/funeral_wreath.jpg" alt="">
                     <div class="productDescription">
-                        Begravningskrans
+                        Funeral wreath
                     </div>
                     <div class="priceTag">
                         <div class="textGreyish">
-                            Från:
+                            From:
                         </div>
                         <div>
                             <span>800</span>kr
@@ -106,11 +106,11 @@
                 <div class="product">
                     <img src="images/wedding_bouquet.jpg" alt="">
                     <div class="productDescription">
-                        Bröllopsbukett
+                        Wedding bouquet
                     </div>
                     <div class="priceTag">
                         <div class="textGreyish">
-                            Från:
+                            From:
                         </div>
                         <div>
                             <span>1200</span>kr
@@ -120,11 +120,11 @@
                 <div class="product">
                     <img src="images/summer_bouquet.jpg" alt="">
                     <div class="productDescription">
-                        Sommarbukett
+                        Summer bouquet
                     </div>
                     <div class="priceTag">
                         <div class="textGreyish">
-                            Från:
+                            From:
                         </div>
                         <div>
                             <span>200</span>kr
@@ -139,17 +139,17 @@
                     <thead class="textMedium fontProza fontBold">
                         <tr>
                             <th>
-                                Dag
+                                Day
                             </th>
                             <th>
-                                Öppettider
+                                Opening hours
                             </th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td>
-                                Måndag
+                                Monday
                             </td>
                             <td>
                                 10-16
@@ -157,7 +157,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Tisdag
+                                Tuesday
                             </td>
                             <td>
                                 10-16
@@ -165,7 +165,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Onsdag
+                                Wednesday
                             </td>
                             <td>
                                 12-18
@@ -173,7 +173,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Torsdag
+                                Thursday
                             </td>
                             <td>
                                 10-16
@@ -181,7 +181,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Fredag
+                                Friday
                             </td>
                             <td>
                                 10-16
@@ -189,7 +189,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Lördag
+                                Saturday
                             </td>
                             <td>
                                 12-15
@@ -197,10 +197,10 @@
                         </tr>
                         <tr>
                             <td>
-                                Söndag
+                                Sunday
                             </td>
                             <td>
-                                STÄNGT
+                                CLOSED
                             </td>
                         </tr>
                     </tbody>
@@ -211,12 +211,12 @@
                 <div class="textMedium fontProza fontBold">
                     Delikat Flora
                 </div>
-                <a href="about_us.html">Om oss</a>
+                <a href="about_us_english.html">About us</a>
             </div>
             <div class="divider"></div>
             <div class="contactInfo">
                 <div class="textMedium fontProza fontBold">
-                    Kontaktinformation
+                    Contact information
                 </div>
                 <p>
                     <a href="tel:+0630555555">0630 555 555</a>
