--- a/_templates/modules/footer.html
+++ b/_templates/modules/footer.html
@@ -38,7 +38,7 @@
                         </tr>
                         <tr>
                             <td>
-                                !!!THURSDAY
+                                !!!THURSDAY!!!
                             </td>
                             <td>
                                 10-16
