drop down button fix and language template fixes

--- a/_templates/pages/about_us.html
+++ b/_templates/pages/about_us.html
@@ -16,7 +16,7 @@
                 <div class="staffMember">
                     <img src="images/fredrik_ortqvist.jpg" alt="">
                     <p>Fredrik Örtqvist</p>
-                    !!!OWNER!!!
+                    <p>!!!OWNER!!!</p>
                 </div>
                 <div class="staffMember">
                     <img src="images/anna_pettersson.jpg" alt="">
