--- a/website/about_us_english.html
+++ b/website/about_us_english.html
@@ -26,9 +26,7 @@
         </div>
         <div class="dropDown">
             <label class="dropDownLabel">
-                <div class="smallDivider"></div>
-                <div class="smallDivider"></div>
-                <div class="smallDivider"></div>
+                <img src="images/burger_menu.jpg" alt="">
                 <button onclick="onDropDownButtonClick()" class="dropButton"></button>
             </label>
             <div class="dropDownMenu">
@@ -50,7 +48,7 @@
                 <div class="staffMember">
                     <img src="images/fredrik_ortqvist.jpg" alt="">
                     <p>Fredrik Örtqvist</p>
-                    Owner
+                    <p>Owner</p>
                 </div>
                 <div class="staffMember">
                     <img src="images/anna_pettersson.jpg" alt="">
