--- a/website/flowergram.html
+++ b/website/flowergram.html
@@ -26,9 +26,7 @@
         </div>
         <div class="dropDown">
             <label class="dropDownLabel">
-                <div class="smallDivider"></div>
-                <div class="smallDivider"></div>
-                <div class="smallDivider"></div>
+                <img src="images/burger_menu.jpg" alt="">
                 <button onclick="onDropDownButtonClick()" class="dropButton"></button>
             </label>
             <div class="dropDownMenu">
@@ -167,7 +165,7 @@
             </div>
         </footer>
     </main>
-    <script src="postal_code_check.js"></script>
+    <script src="postal_code_check_swedish.js"></script>
     <script src="drop_down_button.js"></script>
 
 </body>
