--- a/_templates/pages/flowergram.html
+++ b/_templates/pages/flowergram.html
@@ -21,10 +21,10 @@
                     <div class="sendFlowersText textMediumSmall fontProza">
                         !!!SEND_FLOWERS!!!
                     </div>
-                    <input type="text" class="postalCodeInput textSmall fontInter" placeholder="Postnummer: XXX XX">
+                    <input type="text" class="postalCodeInput textSmall fontInter" placeholder="!!!POSTAL_CODE!!!: XXX XX">
                     <div class="postalCodeOutput textSmall fontInter"> 
                     </div>
-                    <input onclick="postalCodeCheck()" type="button" class="confirmButton textSmall fontInter" value="Kolla postnummer">
+                    <input onclick="postalCodeCheck()" type="button" class="confirmButton textSmall fontInter" value="!!!CHECK_POSTAL_CODE!!!">
                     <div class="serviceDescription textSmall fontInter">
                         !!!FLOWERGRAM_DESCRIPTION!!!
                     </div>
@@ -33,7 +33,7 @@
         </div>
         !!!FOOTER!!!
     </main>
-    <script src="postal_code_check.js"></script>
+    <script src="!!!CHECK_POSTAL_CODE_JS!!!"></script>
     !!!JS!!!
 </body>
 
