--- a/website/flowergram_english.html
+++ b/website/flowergram_english.html
@@ -26,9 +26,7 @@
         </div>
         <div class="dropDown">
             <label class="dropDownLabel">
-                <div class="smallDivider"></div>
-                <div class="smallDivider"></div>
-                <div class="smallDivider"></div>
+                <img src="images/burger_menu.jpg" alt="">
                 <button onclick="onDropDownButtonClick()" class="dropButton"></button>
             </label>
             <div class="dropDownMenu">
@@ -55,10 +53,10 @@
                     <div class="sendFlowersText textMediumSmall fontProza">
                         Send flower bouquets with our flower delivery service.
                     </div>
-                    <input type="text" class="postalCodeInput textSmall fontInter" placeholder="Postnummer: XXX XX">
+                    <input type="text" class="postalCodeInput textSmall fontInter" placeholder="Postal code: XXX XX">
                     <div class="postalCodeOutput textSmall fontInter"> 
                     </div>
-                    <input onclick="postalCodeCheck()" type="button" class="confirmButton textSmall fontInter" value="Kolla postnummer">
+                    <input onclick="postalCodeCheck()" type="button" class="confirmButton textSmall fontInter" value="Check postal code">
                     <div class="serviceDescription textSmall fontInter">
                         With our flower delivery service, you can easily surprise someone with beautiful flowers delivered right to their door. Choose a bouquet, write a personal message, and we’ll take care of the rest. Perfect for birthdays, holidays, or everyday joy.
                     </div>
@@ -167,7 +165,7 @@
             </div>
         </footer>
     </main>
-    <script src="postal_code_check.js"></script>
+    <script src="postal_code_check_english.js"></script>
     <script src="drop_down_button.js"></script>
 
 </body>
