--- a/website/index.html
+++ b/website/index.html
@@ -26,9 +26,7 @@
         </div>
         <div class="dropDown">
             <label class="dropDownLabel">
-                <div class="smallDivider"></div>
-                <div class="smallDivider"></div>
-                <div class="smallDivider"></div>
+                <img src="images/burger_menu.jpg" alt="">
                 <button onclick="onDropDownButtonClick()" class="dropButton"></button>
             </label>
             <div class="dropDownMenu">
