--- a/website/consultation_english.html
+++ b/website/consultation_english.html
@@ -54,7 +54,7 @@
                     </div>
                     <img src="images/consultation.jpg" alt="">
                     <div class="serviceDescription">
-                        During a 30-minute consultation, you’ll receive personal advice from our florists. Together we’ll go through your wishes, colours, shapes, and the feeling you want to convey. Contact us and we’ll arrange a time with one of our florists.
+                        During a 30-minute consultation, you’ll receive personal advice from our florist. Together we’ll go through your wishes, colours and the feeling you want to convey. Contact us and we’ll arrange a time with our florist.
                     </div>
                 </div>
             </div>
