--- a/_templates/modules/header.html
+++ b/_templates/modules/header.html
@@ -26,8 +26,8 @@
         </div>
         
         <div class="allServices">
-            <a href="!!!PRODUCTS_LINK!!!" class="products textMedium textDark fontProza">!!!PRODUCTS!!!</a>
-            <a href="!!!CONSULTATION_LINK!!!" class="products textMedium textDark fontProza">!!!CONSULTATION!!!</a>
-            <a href="!!!FLOWERGRAM_LINK!!!" class="products textMedium textDark fontProza">!!!FLOWERGRAM!!!</a>
+            <a href="!!!PRODUCTS_LINK!!!" class="products textMedium textDark fontProza fontBold">!!!PRODUCTS!!!</a>
+            <a href="!!!CONSULTATION_LINK!!!" class="products textMedium textDark fontProza fontBold">!!!CONSULTATION!!!</a>
+            <a href="!!!FLOWERGRAM_LINK!!!" class="products textMedium textDark fontProza fontBold">!!!FLOWERGRAM!!!</a>
         </div>
     </header>
