--- a/website/about_us_english.html
+++ b/website/about_us_english.html
@@ -37,9 +37,9 @@
         </div>
         
         <div class="allServices">
-            <a href="products_english.html" class="products textMedium textDark fontProza">Products</a>
-            <a href="consultation_english.html" class="products textMedium textDark fontProza">Consultation</a>
-            <a href="flowergram_english.html" class="products textMedium textDark fontProza">Flowergram</a>
+            <a href="products_english.html" class="products textMedium textDark fontProza fontBold">Products</a>
+            <a href="consultation_english.html" class="products textMedium textDark fontProza fontBold">Consultation</a>
+            <a href="flowergram_english.html" class="products textMedium textDark fontProza fontBold">Flowergram</a>
         </div>
     </header>
     <main>
