--- a/website/index.html
+++ b/website/index.html
@@ -37,9 +37,9 @@
         </div>
         
         <div class="allServices">
-            <a href="products.html" class="products textMedium textDark fontProza">Produkter</a>
-            <a href="consultation.html" class="products textMedium textDark fontProza">Konsultation</a>
-            <a href="flowergram.html" class="products textMedium textDark fontProza">Blommogram</a>
+            <a href="products.html" class="products textMedium textDark fontProza fontBold">Produkter</a>
+            <a href="consultation.html" class="products textMedium textDark fontProza fontBold">Konsultation</a>
+            <a href="flowergram.html" class="products textMedium textDark fontProza fontBold">Blommogram</a>
         </div>
     </header>
     <main>
