language template fix

--- a/_templates/modules/footer.html
+++ b/_templates/modules/footer.html
@@ -76,7 +76,7 @@
                 <div class="textMedium fontProza fontBold">
                     Delikat Flora
                 </div>
-                !!!ABOUT_US_LINK!!!
+                <a href="!!!ABOUT_US_LINK!!!">!!!ABOUT_US!!!</a>
             </div>
             <div class="divider"></div>
             <div class="contactInfo">
