--- a/website/consultation_english.html
+++ b/website/consultation_english.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Konsultation</title>
+    <title>Consultation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
