--- a/website/products_english.html
+++ b/website/products_english.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Våra produkter</title>
+    <title>Our products</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
