--- a/website/products_english.html
+++ b/website/products_english.html
@@ -11,10 +11,10 @@
 <body>
     <header>
         <div class="languageSelection">
-            <a href="index.html">
+            <a href="products.html">
                 <img src="images/swedish_flag.jpg" alt="Swedish">
             </a>
-            <a href="index_english.html">
+            <a href="products_english.html">
                 <img src="images/british_flag.jpg" alt="English">
             </a>
         </div>
